# mcptt

MCOP-SDK/android-ngn-stack/: CMakeLists.txt  build.gradle  proguard-rules.pro
MCOP-SDK/android-ngn-stack/src/main/: AndroidManifest.xml
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/: NgnApplication.java  NgnEngine.java  NgnNativeService.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/datatype/emergency/: StateEmergencyType.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/datatype/location/: DataCell.java  DataReport.java  InfoReport.java  LocationDataDegree.java  TypeMcpttSignallingEvent.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/datatype/mbms/: AnnouncementTypeParams.java  MbmsData.java  MbmsListeningStatusType.java  McpttMbmsUsageInfoType.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/datatype/mcpttinfo/: AllTypeGKTPsType.java  ContentType.java  GKTPType.java  McpttParamsType.java  McpttinfoType.java  OnNetworkRegroupedGKTPsType.java  ProtectionType.java  SingleTypeGKTPsType.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/datatype/mcpttloc/: LocationInfo.java  LocationType.java  ProtectionType.java  TCellChange.java  TConfigurationType.java  TCoordinateType.java  TCurrentLocationType.java  TEllipsoidArcType.java  TEmergencyEventType.java  TEmptyType.java  TEmptyTypeAttribute.java  TGeographicalAreaChange.java  TGeographicalAreaDef.java  TIntegerAttributeType.java  TMbmsSaChangeType.java  (+17 more)
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/events/: NgnEventArgs.java  NgnInviteEventArgs.java  NgnInviteEventTypes.java  NgnMcpttEventArgs.java  NgnMcpttEventTypes.java  NgnMcpttMbmsEventArgs.java  NgnMcpttMbmsEventTypes.java  NgnMediaPluginEventArgs.java  NgnMediaPluginEventTypes.java  NgnMessagingAffiliationEventArgs.java  NgnMessagingAffiliationEventTypes.java  NgnMessagingEventArgs.java  NgnMessagingEventTypes.java  NgnMessagingLocationEventArgs.java  NgnMessagingLocationEventTypes.java  NgnMessagingMbmsEventArgs.java  NgnMessagingMbmsEventTypes.java  NgnMsrpEventArgs.java  NgnMsrpEventTypes.java  NgnPublicationAffiliationEventArgs.java  NgnPublicationAffiliationEventTypes.java  NgnPublicationEventArgs.java  NgnPublicationEventTypes.java  NgnRegistrationEventArgs.java  NgnRegistrationEventTypes.java  NgnStackEventArgs.java  NgnStackEventTypes.java  NgnStringEventArgs.java  NgnSubscriptionAffiliationEventArgs.java  NgnSubscriptionAffiliationEventTypes.java  NgnSubscriptionCMSEventArgs.java  NgnSubscriptionCMSEventTypes.java  NgnSubscriptionEventArgs.java  NgnSubscriptionEventTypes.java  NgnSubscriptionGMSEventArgs.java  NgnSubscriptionGMSEventTypes.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/media/: NgnCameraProducer.java  NgnMediaType.java  NgnProxyAudioConsumer.java  NgnProxyAudioProducer.java  NgnProxyPlugin.java  NgnProxyPluginMgr.java  NgnProxyVideoConsumer.java  NgnProxyVideoConsumerGL.java  NgnProxyVideoConsumerSV.java  NgnProxyVideoProducer.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/model/: NgnAccessPoint.java  NgnContact.java  NgnDeviceInfo.java  NgnEmail.java  NgnHistoryAVCallEvent.java  NgnHistoryEvent.java  NgnHistoryList.java  NgnHistoryMsrpEvent.java  NgnHistorySMSEvent.java  NgnPhoneNumber.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/services/: INgnBaseService.java  INgnConfigurationService.java  INgnContactService.java  INgnHistoryService.java  INgnHttpClientService.java  INgnNetworkService.java  INgnSipService.java  INgnSoundService.java  INgnStorageService.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/sip/: MyDRegisterCallback.java  MyMcpttCallback.java  MyMcpttMbmsCallback.java  MyMessagingAffiliationSession.java  MyMessagingLocationSession.java  MyMessagingMbmsSession.java  MyPublicationAffiliationSession.java  MyPublicationAuthenticationSession.java  MySubscriptionAffiliationSession.java  MySubscriptionCMSSession.java  MySubscriptionGMSSession.java  NgnAVSession.java  NgnInfoSession.java  NgnInviteSession.java  NgnMessagingSession.java  NgnMsrpSession.java  NgnPresenceStatus.java  NgnPublicationSession.java  NgnRegistrationSession.java  NgnSipPrefrences.java  NgnSipSession.java  NgnSipStack.java  NgnSubscriptionSession.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/ngn/utils/: NgnCallbackFunc.java  NgnConfigurationEntry.java  NgnContentType.java  NgnDataBaseHelper.java  NgnDateTimeUtils.java  NgnGraphicsUtils.java  NgnListUtils.java  NgnObservableHashMap.java  NgnObservableList.java  NgnObservableObject.java  NgnPredicate.java  NgnStringUtils.java  NgnTimer.java  NgnUriUtils.java
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/tinyWRAP/: ActionConfig.java  DDebugCallback.java  DRegisterCallback.java  InviteSession.java  McpttCallback.java  McpttMbmsEvent.java  McpttMbmsMessage.java  McpttMessage.java  McpttSession.java  MediaSessionMgr.java  MessagingLocationEvent.java  MessagingLocationSession.java  MessagingMbmsSession.java  MsrpCallback.java  MsrpEvent.java  MsrpSession.java  OptionsSession.java  ProxyAudioProducerCallback.java  ProxyPlugin.java  ProxyPluginMgrCallback.java  ProxyVideoConsumer.java  ProxyVideoConsumerCallback.java  ProxyVideoFrame.java  ProxyVideoProducerCallback.java  PublicationAffiliationEvent.java  PublicationAuthenticationSession.java  PublicationEvent.java  RPMessage.java  RegistrationAuthenticationEvent.java  RegistrationSession.java  SMSEncoder.java  SWIGTYPE_p_p_char.java  SafeObject.java  SipEvent.java  SipSession.java  SipStack.java  SubscriptionAffiliationEvent.java  SubscriptionCMSEvent.java  SubscriptionCMSSession.java  XcapCallback.java  (+22 more)
MCOP-SDK/android-ngn-stack/src/main/java/org/doubango/utils/: AndroidUtils.java  Utils.java
MCOP-SDK/android-ngn-stack/src/main/res/layout/: screen_authetication.xml  screen_authetication_web.xml
MCOP-SDK/android-ngn-stack/src/main/res/raw/: mcpttueinitconf  mcpttuserprofiledefault  profiles
MCOP-SDK/android-ngn-stack/src/main/res/values/: settingsUserDefault.xml  strings.xml
(+1356 files in other folders)
